# job-tracker-app

./: README.md
backend/: conftest.py  pyproject.toml
backend/app/: database.py  lifespan.py  main.py
backend/app/models/: application.py
backend/app/routes/: applications.py
backend/app/schemas/: application.py
backend/tests/: test_applications.py
frontend/: package-lock.json
